[gd_scene load_steps=9 format=3 uid="uid://b7pys7pmryb7p"]

[ext_resource type="Script" path="res://autoloads/pause_menu.gd" id="1_7ci1p"]
[ext_resource type="Shader" path="res://shaders/blur.frag.gdshader" id="1_diulj"]
[ext_resource type="Texture2D" uid="uid://b8mduvlkaeubs" path="res://assets/menu/menue_pause.png" id="2_v21uy"]
[ext_resource type="PackedScene" uid="uid://5o8s6k2pnsvy" path="res://scenes/button.tscn" id="3_7a1nm"]
[ext_resource type="Texture2D" uid="uid://cxm4sypqhx5ng" path="res://assets/menu/resume.png" id="4_e4hyq"]
[ext_resource type="Texture2D" uid="uid://bp5fbpqtqqxyd" path="res://assets/menu/BTMM.png" id="6_jrsx7"]
[ext_resource type="Texture2D" uid="uid://c12k40nioiigs" path="res://assets/menu/restartlevel.png" id="7_iqd03"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iy1xw"]
shader = ExtResource("1_diulj")
shader_parameter/sigma = 2.0

[node name="PauseMenu" type="Node2D"]
process_mode = 3
z_index = 1000
position = Vector2(-960, -540)
script = ExtResource("1_7ci1p")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(960, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_v21uy")

[node name="Resume" parent="." instance=ExtResource("3_7a1nm")]
offset_left = 960.0
offset_top = 284.0
offset_right = 1547.0
offset_bottom = 484.0
scale = Vector2(0.4, 0.4)
focus_neighbor_bottom = NodePath("../Restart")
texture_normal = ExtResource("4_e4hyq")
bg_scale = Vector2(6, 1.2)

[node name="Restart" parent="." instance=ExtResource("3_7a1nm")]
offset_left = 960.0
offset_top = 434.0
offset_right = 2274.0
offset_bottom = 634.0
scale = Vector2(0.4, 0.4)
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Main Menu")
texture_normal = ExtResource("7_iqd03")
bg_scale = Vector2(6, 1.2)

[node name="Main Menu" parent="." instance=ExtResource("3_7a1nm")]
offset_left = 960.0
offset_top = 584.0
offset_right = 2274.0
offset_bottom = 784.0
scale = Vector2(0.4, 0.4)
focus_neighbor_top = NodePath("../Restart")
texture_normal = ExtResource("6_jrsx7")
bg_scale = Vector2(6, 1.2)

[node name="BackgroundBlur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_iy1xw")
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(77.0366, 43.4822)
mouse_filter = 2
color = Color(1, 1, 1, 0)

[connection signal="ButtonClick" from="Resume" to="." method="_on_resume_button_click"]
[connection signal="ButtonClick" from="Restart" to="." method="_on_restart_button_click"]
[connection signal="ButtonClick" from="Main Menu" to="." method="_on_main_menu_button_click"]
